--- a/lib/l10n/app_localizations_es.arb
+++ b/lib/l10n/app_localizations_es.arb
@@ -4,6 +4,10 @@
   "@welcome": {
     "description": "Título de bienvenida en la pantalla principal"
   },
+  "welcomeToRecetasPeruanas": "¡Bienvenido a Recetas Peruanas!",
+  "@welcomeToRecetasPeruanas": {
+    "description": "Mensaje de bienvenida después del login exitoso"
+  },
   "descriptionWelcome": "Lo mejor de la gastronomia peruana.",
   "@descriptionWelcome": {
     "description": "Subtítulo de bienvenida"
