--- a/lib/l10n/app_localizations_en.arb
+++ b/lib/l10n/app_localizations_en.arb
@@ -714,5 +714,9 @@
     "placeholders": {
       "planName": {}
     }
+  },
+  "recoverEmailSent": "Recovery email sent successfully.",
+  "@recoverEmailSent": {
+    "description": "Success message when the password recovery email is sent"
   }
 }
